[package]
name = "chenv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.9"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
