[package]
name = "chenv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.9"
jsonpath-rust = "0.7.5"
reqwest = {version = "0.12.14", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha256 = "1.6.0"
tempfile = "3.18.0"
url = { version = "2", features = ["serde"] }
